--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		<header>
 			<nav class="navbar-expand-lg navbar-dark bg-dark navbar fixed-top">
 				<div class="container">
-					<a href="index.html"><img src="file:///C:/Users/sergi/Downloads/logocoche-iloveimg-resized%20(2).png"></img></a>
+					<a href="index.html"><img src="https://image.ibb.co/gUrC8S/logocoche_iloveimg_resized_2.png"></img></a>
 					<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar3SupportedContent" aria-controls="navbar3SupportedContent" aria-expanded="false" aria-label="Toggle navigation"> 
 						<span class="navbar-toggler-icon"></span> 
 					</button>
